@@ -7,6 +7,7 @@ Hopefully the last beta.
 Bug fixes:
 - Fixed shopAuto_open timing problems with sitAuto (also changed ai_shop
   timeout)
+- Added optional teleportAuto_unstuck to use teleport when stucked
 
 
 ==================
